# Exe2Mem

./: CMakeLists.txt  README.md  test_pe_parser
cli/: CMakeLists.txt  exe2mem_cli.cpp
core/: CMakeLists.txt
core/pe_parser/: pe_parser.cpp  pe_parser.hpp
core/pe_validator/: pe_validator.cpp  pe_validator.hpp
loader/: CMakeLists.txt
loader/api_resolver/: api_resolver.cpp  api_resolver.hpp
loader/entry_dispatcher/: entry_dispatcher.cpp  entry_dispatcher.hpp
loader/runtime_stub/: runtime_stub.cpp  runtime_stub.hpp
loader/syscall_abstraction/: syscall_abstraction.cpp  syscall_abstraction.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_pe_parser.cpp
transform/: CMakeLists.txt  entrypoint_rewriter.cpp  entrypoint_rewriter.hpp  execution_blob_generator.cpp  execution_blob_generator.hpp  import_resolver.cpp  import_resolver.hpp  memory_layout_builder.cpp  memory_layout_builder.hpp  relocation_engine.cpp  relocation_engine.hpp
